# BlackBox_CSV_Render

./: .gitignore  AGENTS.md  Cargo.toml  IMUF_IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE_COMMERCIAL  OVERVIEW.md  Overview.md  README.md  Readme.md
.github/: PRE_COMMIT_HOOK_FIX.md  copilot-instructions.md  pre-commit-hook.sh  setup-dev.sh
.github/workflows/: build.yml
INFORMATION/: IMUF_FILTERING_ANALYSIS.md
src/: axis_names.rs  calc_step_response.rs  constants.rs  debug_mode_lookup.rs  eso.rs  fft_utils.rs  font_config.rs  lib.rs  log_data.rs  log_parser.rs  main.rs  pid_context.rs  plot_framework.rs  plotting_utils.rs  report.rs  spectrograph.rs  step_response.rs  types.rs
src/data_analysis/: calc_step_response.rs  d_term_delay.rs  derivative.rs  fft_utils.rs  filter_delay.rs  filter_response.rs  mod.rs  optimal_p_estimation.rs  physics_model.rs  spectral_analysis.rs  tests_optimal_p.rs  torque_inertia_profiler.rs  transfer_function_estimation.rs
src/data_input/: log_data.rs  log_parser.rs  mod.rs  pid_metadata.rs
src/plot_functions/: mod.rs  peak_detection.rs  plot_bode.rs  plot_d_term_heatmap.rs  plot_d_term_psd.rs  plot_d_term_spectrums.rs  plot_eso.rs  plot_gyro_spectrums.rs  plot_gyro_vs_unfilt.rs  plot_motor_spectrums.rs  plot_pid_activity.rs  plot_pidsum_error_setpoint.rs  plot_psd.rs  plot_psd_dB_heatmap.rs  plot_psd_db_heatmap.rs  plot_psd_heatmap.rs  plot_psd_throttle_heatmap.rs  plot_setpoint_derivative.rs  plot_setpoint_vs_gyro.rs  plot_step_response.rs  (+1 more)
tests/: formatting_integration_test.rs  y_axis_formatting_test.rs
