[package]
name = "BlackBox_CSV_Render"
version = "0.1.0"
edition = "2021" # Use 2021 edition as it's standard, 2024 is not yet released/stable

[dependencies]
plotters = "0.3"
csv = "1.1"
realfft = "3.3"
num-complex = "0.4"
ndarray = "0.15"
ndarray-stats = "0.5"
colorous = "1.0.16"

[dev-dependencies]
rand = "0.8"
